[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast_dataloader"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
    { name = "moskomule", email = "moskomule@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "rich"
]
dynamic = ["version"]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://pypi.org/simple/"

[project.urls]
Documentation = "https://moskomule.github.io/fast_dataloader"
Issues = "https://github.com/moskomule/fast_dataloader/issues"
Source = "https://github.com/moskomule/fast_dataloader"

[tool.hatch.version]
path = "fast_dataloader/__about__.py"

[tool.hatch.envs.tests]
dependencies = [
    "pytest",
]

[[tool.hatch.envs.test.matrix]]
python = ["310", ]

[tool.hatch.envs.docs]
extra-dependencies = [
    "mkdocs-material",
    "mkdocstrings[python]"
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
]